First working example.
